k8s/loan-service/server/server.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: loan-service-svc
  labels:
    app: loan-service
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: loan-service
    role: server
  type: ClusterIP
status:
  loadBalancer: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: loan-service-depl
  labels:
    app: loan-service
spec:
  selector:
    matchLabels:
      app: loan-service
      role: server
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      creationTimestamp: null
      name: loan-service
      labels:
        app: loan-service
        role: server
    spec:
      containers:
      - image: iron2ron/loan-service:latest
        imagePullPolicy: Always
        name: loan-service
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: 64Mi
            cpu: 300m
          limits:
            memory: 128Mi
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 3
