k8s/loan-service/server/server.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: loan-service-gateway
  labels:
    app: loan-service
    role: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "loan.example.com"
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loan-service-http
  labels:
    app: loan-service
spec:
  parentRefs:
  - name: loan-service-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: loan-service-svc
      port: 8081
